--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
 			</div>
 
-			<footer>&copy; Created with  <a href="#">Castanhos Tecnologia</a></footer>
+			<footer>&copy; Created with <ion-icon name="heart"></ion-icon><br>by <a href="#">Castanhos Tecnologia 2023.</a></footer>
 		</div>
 		<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 		<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
