--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="container">
 			<div class="profile">
-				<img src="./assets/avatar.jpg" alt="Vitor's profile photo" />
+				<img src="./assets/avatar.png" alt="Vitor's profile photo" />
 				<p>@vitorcastanhos</p>
 			</div>
 
@@ -22,16 +22,16 @@
 			</div>
 			<ul>
 				<li>
-					<a href="https://www.youtube.com/channel/UCPh6UXkcY3Fx0_LGiRvwt-A">Youtube</a>
+					<a href="https://www.youtube.com/channel/UCPh6UXkcY3Fx0_LGiRvwt-A" target="_blank">Youtube</a>
 				</li>
 				<li>
-					<a href="https://github.com/Vitorcastanhos">Github</a>
+					<a href="https://github.com/Vitorcastanhos" target="_blank">Github</a>
 				</li>
 				<li>
-					<a href="https://www.linkedin.com/in/vitorcastanhos/">LinkedIn</a>
+					<a href="https://www.linkedin.com/in/vitorcastanhos/" target="_blank">LinkedIn</a>
 				</li>
 				<li>
-					<a href="#">Instagram</a>
+					<a href="https://www.instagram.com/vitorcastanhos/" target="_blank">Instagram</a>
 				</li>
 			</ul>
 			<div class="social-links">
@@ -41,7 +41,7 @@
 				<a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
 			</div>
 
-			<footer>&copy; Created with <ion-icon name="heart"></ion-icon><br>by <a href="#">Castanhos Tecnologia 2023.</a></footer>
+			<footer>&copy; Created with <ion-icon name="heart"></ion-icon><br />by <a href="#">Castanhos Tecnologia 2023.</a></footer>
 		</div>
 		<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 		<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
