--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 				</li>
 			</ul>
 			<div class="social-links">
-				<a href="https://www.youtube.com/channel/UCPh6UXkcY3Fx0_LGiRvwt-A"><ion-icon name="logo-youtube"></ion-icon></a>
-				<a href="https://github.com/Vitorcastanhos"><ion-icon name="logo-github"></ion-icon></a>
-				<a href="https://www.linkedin.com/in/vitorcastanhos/"><ion-icon name="logo-linkedin"></ion-icon></a>
-				<a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+				<a href="https://www.youtube.com/channel/UCPh6UXkcY3Fx0_LGiRvwt-A" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
+				<a href="https://github.com/Vitorcastanhos" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+				<a href="https://www.linkedin.com/in/vitorcastanhos/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+				<a href="https://www.instagram.com/vitorcastanhos" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
 			</div>
 
 			<footer>&copy; Created with <ion-icon name="heart"></ion-icon><br />by <a href="#">Castanhos Tecnologia 2023.</a></footer>
