few more img changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <div class="profile">
-        <img src="./assets/avatar.png" alt="Vitor's profile photo" />
+        <img src="./img/avatar-light.png" alt="Vitor's profile photo" />
         <p>@vitorcastanhos</p>
       </div>
 
